pilot/pkg/serviceregistry/kube/controller/testdata/allow-groups.yaml
groups:
- rules:
  - matches:
    - namespaces:
      - exact: ns
name: groups
scope: NAMESPACE
