pilot/pkg/serviceregistry/kube/controller/testdata/peer-authn-permissive-in.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: permissive-mtls
spec:
  mtls:
    mode: PERMISSIVE
