pilot/pkg/serviceregistry/kube/controller/testdata/peer-authn-permissive-port-mtls-strict.yaml
action: DENY
groups:
- rules:
  - matches:
    - destinationPorts:
      - 9090
      notPrincipals:
      - presence: {}
name: converted-peer-authentication-permissive-strict-mtls
scope: WORKLOAD_SELECTOR
