pilot/pkg/serviceregistry/kube/controller/testdata/peer-authn-strict-and-disable-port-mtls.yaml
action: DENY
groups:
- rules:
  - matches:
    - notPrincipals:
      - presence: {}
- rules:
  - matches:
    - notDestinationPorts:
      - 9090
name: converted_peer_authentication_strict-and-disable-mtls
scope: WORKLOAD_SELECTOR
