pilot/pkg/serviceregistry/kube/controller/testdata/peer-authn-strict-and-permissive-port-mtls.yaml
action: DENY
groups:
- rules:
  - matches:
    - notPrincipals:
      - presence: {}
- rules:
  - matches:
    - notDestinationPorts:
      - 9090
name: converted-peer-authentication-strict-and-permissive-mtls
scope: WORKLOAD_SELECTOR
