pilot/pkg/serviceregistry/kube/controller/testdata/peer-authn-unset-port-mtls-permissive-in.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: strict-mtls
spec:
  selector:
    matchLabels:
      app: a
  mtls:
    mode: UNSET
  portLevelMtls:
    9090:
      mode: PERMISSIVE
