pilot/pkg/serviceregistry/kube/controller/testdata/peer-authn-unset-port-mtls-permissive.yaml
action: DENY
groups:
- rules:
  - matches:
    - notDestinationPorts:
      - 9090
name: converted-peer-authentication-strict-mtls
scope: WORKLOAD_SELECTOR
