pilot/pkg/serviceregistry/kube/controller/testdata/peer-authn-unset-port-mtls-strict.yaml
action: DENY
groups:
- rules:
  - matches:
    - destinationPorts:
      - 8080
      notPrincipals:
      - presence: {}
name: converted-peer-authentication-strict-mtls
scope: WORKLOAD_SELECTOR
